# parser_hh

./: .gitignore  alembic.ini  pyproject.toml  script_date.sh
src/: main.py  request.py
src/alembic/: env.py
src/alembic/versions/: 2024_06_26_1443-2328d174a206_create_tables.py  2024_06_27_0059-1547d1dc8e62_init2.py  2024_06_27_0059-4de8c9fe9f0f_init.py  2024_06_27_0102-588c980ea673_init3.py  2024_06_27_0153-78ea04cc30bd_init4.py  2024_06_27_1433-31d9f74feff9_mistake_with_datetime_in_vacancy.py
src/api_v1/: __init__.py
src/api_v1/creature/: crud.py  dependencies.py  schemas.py  views.py
src/api_v1/user/: crud.py  shemas.py
src/api_v1/vacancies/: crud.py  service.py  shemas.py  views.py
src/core/: config.py
src/core/models/: __init__.py  area.py  base.py  db_helper.py  employer.py  employment.py  experience.py  salary.py  schedule.py  snippet.py  type_.py  user.py  vacancy.py
src/errors/: validation.py
