[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Valery <teslenko.70@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.31"
unicorn = {extras = ["standard"], version = "^2.0.1.post1"}
install = "^1.3.5"
fastapi-pagination = "^0.12.25"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
